syntax="proto3";
option go_package = "/index_platform;";

message BuildIndexReq {
  // @inject_tag:form:"file_path" uri:"file_path"
  repeated string filepath_lists = 1;
}

message BuildIndexResp {
  // @inject_tag:form:"code" uri:"code"
  int64 code = 1;
  // @inject_tag:form:"message" uri:"message"
  string message = 2;
}

message FileChunk {
  bytes content = 1;
}

message UploadRequest {
  FileChunk fileContent = 1;
  string filename = 2;
}

message UploadResponse {
  // @inject_tag:form:"code" uri:"code"
  int64 code = 1;
  // @inject_tag:form:"message" uri:"message"
  string message = 2;
}

message FileRequest {
  string filename = 1;
}

service IndexPlatformService {
  rpc BuildIndexService(BuildIndexReq) returns (BuildIndexResp);
  rpc UploadFile(stream FileChunk) returns (UploadResponse); // 客户端流式传输
  rpc DownloadFile(FileRequest) returns (stream FileChunk);  // 服务端流式传输
}